--- a/src/css/input.css
+++ b/src/css/input.css
@@ -3,6 +3,21 @@
 @source "../../templates/**/*.templ";
 @source "../../cmd/odoo-manager/static/js/**/*.js";
 
+@theme {
+  --animate-modal-fade-in: modal-fade-in 0.3s ease-out;
+}
+
+@keyframes modal-fade-in {
+  from {
+    opacity: 0;
+    transform: scale(0.95);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
+
 @layer base {
   /* Custom scrollbar for dark theme */
   ::-webkit-scrollbar {
@@ -21,16 +36,5 @@
 
   ::-webkit-scrollbar-thumb:hover {
     background-color: var(--color-gray-500);
-  }
-}
-
-@keyframes modal-fade-in {
-  from {
-    opacity: 0;
-    transform: scale(0.95);
-  }
-  to {
-    opacity: 1;
-    transform: scale(1);
   }
 }
