Mark PostgreSQL 16 as recommended in version selector

--- a/templates/templates.templ
+++ b/templates/templates.templ
@@ -83,7 +83,7 @@ templ Layout(title string) {
 							>
 								<option value="18">18</option>
 								<option value="17">17</option>
-								<option value="16" selected>16</option>
+								<option value="16" selected>16 (Recommended)</option>
 								<option value="15">15</option>
 								<option value="14">14</option>
 							</select>
